--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.2"
     }
 }
